[project]
name = "phcl"
version = "0.1.0"
description = "Python-powered HCL DSL: write Terraform resources using clean Python classes"
authors = [
    {name = "Dmitry Sergeev",email = "realnexusway@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astor (>=0.8.1,<0.9.0)",
    "python-hcl2 (>=7.3.1,<8.0.0)"
]

[project.scripts]
phcl = "phcl.cli.phcl:main"
